# Bot-Host-Panel

./: .gitignore  .replit  pyproject.toml  render.yaml  replit.md
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/api-server/src/: app.ts
bot-panel/: .env.example  Procfile  RENDER_DEPLOY.md  app.py  bot.py  render.yaml  requirements.txt  run.sh
bot-panel/bot_files/: .gitkeep  main.py  requirements.txt
bot-panel/bot_files/cogs/: general.py  lavalink.py  music.py
bot-panel/cogs/: .gitkeep
bot-panel/config/: settings.py
bot-panel/database/: db.py
bot-panel/models/: bot_config.py  env_variable.py  lavalink_config.py  log_entry.py  panel_config.py  user.py
bot-panel/routes/: auth.py  console.py  dashboard.py  files.py  settings.py  variables.py
bot-panel/services/: bot_manager.py  log_service.py  r2_service.py  stats_service.py
bot-panel/static/css/: main.css
bot-panel/static/js/: console.js  dashboard.js  files.js  main.js  settings.js  variables.js
bot-panel/templates/: base.html  console.html  dashboard.html  error.html  files.html  login.html  settings.html  variables.html
bot-panel/utils/: helpers.py
