[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.14.1",
    "boto3>=1.43.50",
    "discord-py>=2.7.1",
    "flask>=3.1.3",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.3.0",
    "gunicorn>=26.0.0",
    "itsdangerous>=2.2.0",
    "pillow>=12.3.0",
    "psutil>=7.2.2",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
    "wavelink>=3.5.2",
    "werkzeug>=3.1.8",
    "wtforms>=3.2.2",
]
